--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ option(MYMODULE_IS_REMOTE
 # Create a list of source files
 set(_srcs
         src/main.cpp
-        src/StrategyModule.cpp)
+        src/strategy.cpp)
 
 if(MYMODULE_IS_REMOTE)
     # Add a compile flag because code changes a little bit
